Improved bitonic sort performance; mostly on nvidia (WIP, glitches)

--- a/notes.wiki
+++ b/notes.wiki
@@ -27,6 +27,8 @@
 	 sponza: 13280  173    177   358    1101          3194        8074
 	 teapot: 1857   33     46    80     302           456         815
   white_oak: 10781  56     60    186    671           2734        6923
+  
+TODO: next time save resolution as well!
 
 -----------------------------------------------------------------------------------------
                              === Nowa finalna rasteryzacja ===
