--- a/notes.wiki
+++ b/notes.wiki
@@ -65,16 +65,7 @@ conference: 2604
                     === Rasteryzacja wszystkich sampli na raz ===
 -----------------------------------------------------------------------------------------
 
-* *Nowy pomysł:*
-
-  - zamiast load samples od razu generujemy sample w kolejności trójkąta do SMEM
-  - następnie wykonujemy połączone loadSamples i reduce:
-    - iterujemy po pikselach i zgarniamy sample (stos kolorów podobnie jak głębię trzymając w rejestrach)
-	- równocześnie generujemy głębię dla każdego sampla i odpowiednio je porządkujemy
-	- najwyższa wartość ze stosu nie spada ale jest domergowywana do koloru docelowego
-	- bardzo łatwo jesteśmy w stanie wyliczyć dla danego sampla, jaka jest jego pozycja w SMEM
-	  w kolejności po trójkątach
-	na koniec kolor decelowy jest zapisywany do framebuffera
+* *TODO: drobne błędy wciąż widoczne na powerplant*
 
 * *Problem: cały czas wolne samplowanie...*
   WhiteOak: 20ms vs 2.4ms ...
